Fix mobile header margins
This adds enough bottom margin so the header isn't cut off by the previews.

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -30,7 +30,7 @@
 
 		header
 		{
-			margin: 0 0 1em 0;
+			margin: 0 0 2.5em 0;
 		}
 		
 		footer
